# Code-obfuscation-in-context-of-embedded-applications

./: .gitignore  .gitmodules  README.md  linker.ld  makefile
demos/: CMakeLists.txt  benchmark.sh  run_benchmarks.sh
demos/demo_aes/: CMakeLists.txt  demo_aes.c
demos/demo_fft/: CMakeLists.txt  demo_fft.c
demos/demo_pid/: CMakeLists.txt  demo_pid.c
demos/shared/: linker.ld  startup.c  utils.c  utils.h
obfuscation_detection/: CMSIS-NN_functions.csv  dataset_builder.py  dataset_builder_cmake.py  feature_extractor.py  final_vector.npz  monocypher_functions.csv  requirements.txt  rf_obfuscation_model.joblib  scaler.joblib  shared_lib_builder.py  test.c  vectorizer.joblib  xgb_obfuscation_model.joblib
obfuscation_detection/dataset/source/: CmakeLists.txt
obfuscation_detection/dataset/source/Mibench_automotive/basicmath/: basicmath_small.c  cubic.c  isqrt.c  pi.h  rad2deg.c
obfuscation_detection/dataset/source/Mibench_automotive/bitcount/: bitcnt_1.c  bitcnts.c  bitfiles.c  bitstrng.c
obfuscation_pass/: CMakeLists.txt  run_tests.sh
obfuscation_pass/src/: Bogus.cpp  Bogus.hpp  CMakeCache.txt  Flattening.cpp  Flattening.hpp  InstructionSubstitution.cpp  InstructionSubstitution.hpp  PassHandler.cpp
obfuscation_pass/tests/: semantic_test.c  test.ll
src/: CMakeLists.txt
src/demo_aes/: CMakeLists.txt  demo_aes.c
src/demo_fft/: CMakeLists.txt  demo_fft.c
src/demo_pid/: demo_pid.c
src/shared/: startup.c  utils.c  utils.h
